--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "virtual business cards using linkedin",
   "main": "index.js",
   "dependencies": {
-    "express": "~4.9.x"
+    "pg": "4.x",
+    "express": "~4.9.x",
+    "socket.io": "1.3.x"
   },
   "engines": {
     "node": "0.12.x"
